--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,6 @@
     ],
     "start_url": "./index.html",
     "display": "standalone",
-    "background_color": "#000000",
+    "background_color": "#FFFFFF",
     "theme_color": "#FFFFFF"
 }
